@@ -1,4 +1,4 @@
-// Copyright 2007, 2008, 2009 Global Virtual Airlines Group. All Rights Reserved.
+// Copyright 2007, 2008, 2009, 2012 Global Virtual Airlines Group. All Rights Reserved.
 package org.deltava.commands.navdata;
 
 import java.io.*;
@@ -22,7 +22,7 @@ import org.deltava.util.system.SystemData;
 /**
  * A Web Site Command to import Terminal Routes in PSS format.
  * @author Luke
- * @version 2.6
+ * @version 5.0
  * @since 2.0
  */
 
@@ -37,6 +37,7 @@ public class TerminalRouteImportCommand extends AbstractCommand {
 	 * @param ctx the Command context
 	 * @throws CommandException if an unhandled error occurs
 	 */
+	@Override
 	public void execute(CommandContext ctx) throws CommandException {
 
 		// Get the Command result
@@ -108,7 +109,7 @@ public class TerminalRouteImportCommand extends AbstractCommand {
 					String wpt = wptParts.get(3);
 					if (!StringUtils.isEmpty(wpt) && !IDs.contains(wpt)) {
 						IDs.add(wpt);
-						NavigationDataBean nd = NavigationDataBean.create(NavigationDataBean.INT, StringUtils.parse(wptParts.get(4), 0.0),
+						NavigationDataBean nd = NavigationDataBean.create(Navaid.INT, StringUtils.parse(wptParts.get(4), 0.0),
 								StringUtils.parse(wptParts.get(5), 0.0));
 						nd.setCode(wpt);
 						tr.addWaypoint(nd);
@@ -151,7 +152,7 @@ public class TerminalRouteImportCommand extends AbstractCommand {
 			
 			// Update the waypoint types
 			int regionCount = dao.updateTRWaypoints();
-			ctx.setAttribute("regionCount", new Integer(regionCount), REQUEST);
+			ctx.setAttribute("regionCount", Integer.valueOf(regionCount), REQUEST);
 			
 			// Commit
 			ctx.commitTX();
